--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 These individuals contributed to this project.
 Aluu Stephen (aluustephen2019@gmail.com)
-Tobechi Duru ()
+Tobechi Duru (tobechi.duru001@gmail.com)
